GNOME Bugzilla – Bug 556904
Darwin support is broken
Last modified: 2011-09-08 07:27:46 UTC
Please describe the problem: "sysdeps.c:50: error: 'GLIBTOP_SUID_PROC_AFFINITY' undeclared here (not in a function) make[3]: *** [sysdeps.lo] Error 1" libgtop doesn't compile on darwin, there is a declaration missing in sysdeps/darwin/glibtop_server.h Steps to reproduce: Actual results: Expected results: Does this happen every time? Other information:
Created attachment 120853 [details] [review] Patch to fix the problem
Nevermind, the patch is invalid as it produces an error in dynamic linking. The problem is still there.
Created attachment 126130 [details] [review] a stub is just as good if it builds, right?!
Yep it is. Send more patches :] This problem has been fixed in our software repository. The fix will go into the next software release. Thank you for your bug report.
this needs commited on trunk too
To me it seems that d541cf22ef2efd8caa9f4b5a46b043ccb4ff77bc should fix your issue. Could you please confirm that with a 2.28.x release?
Created attachment 195945 [details] [review] Darwin proclist.c patch It doesn't compile now because glibtop_get_proclist_p doesn't match the header.
Review of attachment 195945 [details] [review]: Committed as d1d565aa608ae7a143e99231063a04018096ca58