Fix Darwin support

glibtop_get_proclist_p's signature didn't match the headers prototype.

https://bugzilla.gnome.org/show_bug.cgi?id=556904